--- a/R/data_explore_global_maps.Rmd
+++ b/R/data_explore_global_maps.Rmd
@@ -63,7 +63,11 @@ names(loiczid_raster) <- 'loiczid'
 ### good - the same number
 
 ### Number of aquamaps species per cell
-am_n_per_cell <- am_spp_cells %>%
+iucn_pair_rast_file <- 'rasters/iucn_pair_rast.tif'
+am_pair_rast_file   <- 'rasters/am_pair_rast.tif'
+
+if(!file.exists(iucn_pair_rast_file) | !file.exists(am_pair_rast_file)) {
+  am_n_per_cell <- am_spp_cells %>%
   filter(am_sid %in% unique(spp_list$am_sid)) %>%
   group_by(loiczid) %>%
   summarize(count_am = n()) %>%
@@ -71,23 +75,31 @@ am_n_per_cell <- am_spp_cells %>%
 #             pct_am = count_am/am_n_tot) %>%
   as.data.frame()
 
-am_sp_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'count_am')], 
-                  by = 'loiczid', 
-                  which = 'count_am', 
-                  subsWithNA = TRUE)
-
-### Number of IUCN species per cell
-iucn_n_per_cell <- iucn_spp_cells %>%
-  group_by(loiczid) %>%
-  summarize(count_iucn = n()) %>%
-#   summarize(count_iucn = n(),
-#             pct_iucn = count_iucn/iucn_n_tot) %>%
-  as.data.frame()
-
-iucn_sp_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'count_iucn')], 
+  am_sp_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'count_am')], 
                     by = 'loiczid', 
-                    which = 'count_iucn', 
+                    which = 'count_am', 
                     subsWithNA = TRUE)
+  
+  ### Number of IUCN species per cell
+  iucn_n_per_cell <- iucn_spp_cells %>%
+    group_by(loiczid) %>%
+    summarize(count_iucn = n()) %>%
+  #   summarize(count_iucn = n(),
+  #             pct_iucn = count_iucn/iucn_n_tot) %>%
+    as.data.frame()
+  
+  iucn_sp_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'count_iucn')], 
+                      by = 'loiczid', 
+                      which = 'count_iucn', 
+                      subsWithNA = TRUE)
+  
+  writeRaster(iucn_sp_map, filename = iucn_pair_rast_file, overwrite = TRUE)
+  writeRaster(am_sp_map, filename = am_pair_rast_file, overwrite = TRUE)
+} else {
+  am_sp_map   <- raster(am_pair_rast_file)
+  iucn_sp_map <- raster(iucn_pair_rast_file)
+}
+
 
 ### Plot both maps
 myTheme <- rasterTheme(region = brewer.pal('Blues', n = 9))
@@ -106,25 +118,34 @@ Now look at full aquamaps species
 
 ```{r all_aquamaps, eval = FALSE, echo = FALSE}
 
-am_spp_cells_big <- fread(file.path(dir_am_data, 'hcaf_sp_native_trunc.csv')) %>%
-  as.data.frame(stringsAsFactors = FALSE)
+all_am_rast_file   <- 'rasters/am_all_rast.tif'
 
-### find total spp to allow for percent calcs later
-# am_all_n_tot <- am_spp_cells_big %>% 
-#   dplyr::select(SpeciesID) %>% 
-#   unique() %>% nrow()
+if(!file.exists(am_all_rast_file)) {
+  am_spp_cells_big <- fread(file.path(dir_am_data, 'hcaf_sp_native_trunc.csv')) %>%
+    as.data.frame(stringsAsFactors = FALSE)
+  
+  ### find total spp to allow for percent calcs later
+  # am_all_n_tot <- am_spp_cells_big %>% 
+  #   dplyr::select(SpeciesID) %>% 
+  #   unique() %>% nrow()
+  
+  all_am <- am_spp_cells_big %>%
+    group_by(loiczid) %>%
+    summarize(all_count = n()) %>%
+  #   summarize(all_count = n(),
+  #             all_pct   = all_count/am_all_n_tot) %>%
+    as.data.frame()
+  
+  all_am_map <- subs(loiczid_raster, all_am[ , c('loiczid', 'all_count')], 
+                     by = 'loiczid', 
+                     which = 'all_count', 
+                     subsWithNA = TRUE)
+  
+  writeRaster(all_am_map, filename = am_all_rast_file, overwrite = TRUE)
 
-all_am <- am_spp_cells_big %>%
-  group_by(loiczid) %>%
-  summarize(all_count = n()) %>%
-#   summarize(all_count = n(),
-#             all_pct   = all_count/am_all_n_tot) %>%
-  as.data.frame()
-
-all_am_map <- subs(loiczid_raster, all_am[ , c('loiczid', 'all_count')], 
-                   by = 'loiczid', 
-                   which = 'all_count', 
-                   subsWithNA = TRUE)
+} else {
+  all_am_map   <- raster(all_am_rast_file)
+}
 
 levelplot(all_am_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset')
 ```
@@ -133,26 +154,35 @@ Now look at full IUCN species
 
 ```{r all_aquamaps, eval = FALSE, echo = FALSE}
 
-iucn_cells_file    <- file.path(dir_data_iucn, 'iucn_cells_2015.csv')
-iucn_spp_cells_all <- fread(iucn_cells_file) %>%
-      as.data.frame(stringsAsFactors = FALSE)
+all_iucn_rast_file   <- 'rasters/am_all_rast.tif'
 
-### find total spp to allow for percent calcs later
-# am_all_n_tot <- am_spp_cells_big %>% 
-#   dplyr::select(SpeciesID) %>% 
-#   unique() %>% nrow()
+if(!file.exists(iucn_all_rast_file)) {
+  iucn_cells_file    <- file.path(dir_data_iucn, 'iucn_cells_2015.csv')
+  iucn_spp_cells_all <- fread(iucn_cells_file) %>%
+        as.data.frame(stringsAsFactors = FALSE)
+  
+  ### find total spp to allow for percent calcs later
+  # am_all_n_tot <- am_spp_cells_big %>% 
+  #   dplyr::select(SpeciesID) %>% 
+  #   unique() %>% nrow()
+  
+  all_iucn <- iucn_spp_cells_all %>%
+    group_by(loiczid) %>%
+    summarize(all_count = n()) %>%
+  #   summarize(all_count = n(),
+  #             all_pct   = all_count/am_all_n_tot) %>%
+    as.data.frame()
+  
+  all_iucn_map <- subs(loiczid_raster, all_iucn[ , c('loiczid', 'all_count')], 
+                     by = 'loiczid', 
+                     which = 'all_count', 
+                     subsWithNA = TRUE)
+  
+  writeRaster(all_iucn_map, filename = all_iucn_rast_file, overwrite = TRUE)
 
-all_iucn <- iucn_spp_cells_all %>%
-  group_by(loiczid) %>%
-  summarize(all_count = n()) %>%
-#   summarize(all_count = n(),
-#             all_pct   = all_count/am_all_n_tot) %>%
-  as.data.frame()
-
-all_iucn_map <- subs(loiczid_raster, all_iucn[ , c('loiczid', 'all_count')], 
-                   by = 'loiczid', 
-                   which = 'all_count', 
-                   subsWithNA = TRUE)
+} else {
+  all_iucn_map   <- raster(iucn_all_rast_file)
+}
 
 levelplot(all_iucn_map, par.settings = myTheme, main = 'Entire IUCN Dataset')
 ```
@@ -160,18 +190,15 @@ levelplot(all_iucn_map, par.settings = myTheme, main = 'Entire IUCN Dataset')
 ![image](figures/all_aquamaps_map.png)
 
 ``` {r variations_on_gl_dist_maps, echo = FALSE, eval = FALSE}
-### find distribution by percent of total species
-am_sp_pct_map <- subs(loiczid_raster, am_n_per_cell[ , c('loiczid', 'pct_am')], 
-                      by = 'loiczid', 
-                      which = 'pct_am', 
-                      subsWithNA = TRUE)
-iucn_sp_pct_map <- subs(loiczid_raster, iucn_n_per_cell[ , c('loiczid', 'pct_iucn')], 
-                        by = 'loiczid', 
-                        which = 'pct_iucn', 
-                        subsWithNA = TRUE)
-### find difference in percent between the two distribution maps; should be small,
-### if species are well-matched, since it's all the same species
-diff_pct_map    <- iucn_sp_pct_map - am_sp_pct_map
+### rescale values relative to maximum cell value
+
+am_map_max <- max(all_am_map, na.rm = TRUE)
+all_am_pct_map <- all_am_map/am_map_max
+
+iucn_map_max <- max(all_iucn_map, na.rm = TRUE)
+all_iucn_pct_map <- all_iucn_map/iucn_map_max
+
+diff_pct_map    <- all_am_pct_map - all_iucn_pct_map
 
 ### plot maps with distributions as percentages.  Should it be 0 - 1, or 
 ### 0 - max value?
