--- a/R/data_explore_global_maps.Rmd
+++ b/R/data_explore_global_maps.Rmd
@@ -100,6 +100,8 @@ if(!file.exists(iucn_pair_rast_file) | !file.exists(am_pair_rast_file)) {
   iucn_sp_map <- raster(iucn_pair_rast_file)
 }
 
+am_ln_map <- log(am_sp_map + 1)
+iucn_ln_map <- log(iucn_sp_map + 1)
 
 ### Plot both maps
 myTheme <- rasterTheme(region = brewer.pal('Blues', n = 9))
@@ -111,6 +113,14 @@ levelplot(am_sp_map, par.settings = myTheme,
 levelplot(iucn_sp_map, par.settings = myTheme, 
           main = 'IUCN Dataset', 
           colorkey = list(at = seq(0, 1063, length = 15)))
+
+levelplot(am_ln_map, par.settings = myTheme, 
+          main = 'Aquamaps Dataset', 
+          colorkey = list( at = seq(0, maxValue(am_ln_map), length = 15)))
+
+levelplot(iucn_ln_map, par.settings = myTheme, 
+          main = 'IUCN Dataset', 
+          colorkey = list(at = seq(0, maxValue(iucn_ln_map), length = 15)))
 
 ```
 
@@ -148,6 +158,25 @@ if(!file.exists(all_am_rast_file)) {
 }
 
 levelplot(all_am_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset')
+
+all_am_ln_map <- log(all_am_map + 1)
+all_am_ln_map <- all_am_ln_map/maxValue(all_am_ln_map)
+levelplot(all_am_ln_map, par.settings = myTheme, main = 'Entire Aquamaps Dataset: log-transformed relative species richness', 
+          colorkey = list(at = seq(0, 1, length = 15)))
+
+am_ln_pts <- as.data.frame(rasterToPoints(all_am_ln_map))
+spp_richness_am_plot <- ggplot(am_ln_pts, aes(x = x, y = y)) +
+  ggtheme_map + 
+  geom_raster(aes(fill = layer), alpha = .7) +
+  scale_fill_continuous(low = 'white', high = 'blue') +
+  borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
+  scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
+  scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2)) +
+  labs(title = 'AquaMaps Dataset: log-transformed relative species richness', x = NULL, y = NULL, fill = NULL) 
+
+spp_richness_am_plot
+ggsave(file.path(dir_fig, 'all_am_ln_map.png'), height = 4, width = 8)
+
 ```
 
 Now look at full IUCN species
@@ -185,6 +214,28 @@ if(!file.exists(all_iucn_rast_file)) {
 }
 
 levelplot(all_iucn_map, par.settings = myTheme, main = 'Entire IUCN Dataset')
+
+all_iucn_ln_map <- log(all_iucn_map + 1)
+all_iucn_ln_map <- all_iucn_ln_map/maxValue(all_iucn_ln_map)
+levelplot(all_iucn_ln_map, 
+          par.settings = myTheme, 
+          margin = list(axis = TRUE),
+          main = 'Entire IUCN Dataset: log-transformed relative species richness', 
+          colorkey = list(at = seq(0, 1, length = 15)))
+
+iucn_ln_pts <- as.data.frame(rasterToPoints(all_iucn_ln_map))
+spp_richness_iucn_plot <- ggplot(iucn_ln_pts, aes(x = x, y = y)) +
+  ggtheme_map + 
+  geom_raster(aes(fill = layer), alpha = .7) +
+  scale_fill_continuous(low = 'white', high = 'blue') +
+  borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
+  scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
+  scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2)) +
+  labs(title = 'IUCN Dataset: log-transformed relative species richness', x = NULL, y = NULL, fill = NULL) 
+
+spp_richness_iucn_plot
+ggsave(file.path(dir_fig, 'all_iucn_ln_map.png'), height = 4, width = 8)
+
 ```
 
 ![image](figures/all_aquamaps_map.png)
@@ -203,15 +254,38 @@ diff_pct_map    <- all_am_pct_map - all_iucn_pct_map
 ### plot maps with distributions as percentages.  Should it be 0 - 1, or 
 ### 0 - max value?
 levelplot(all_am_pct_map, par.settings = myTheme, 
-          main = 'Aquamaps Dataset percent of max', 
-          colorkey = list( at = seq(0, 1, length = 15)))
+          main = 'Aquamaps Dataset percent of max')
 levelplot(all_iucn_pct_map, par.settings = myTheme, 
-          main = 'IUCN Dataset percent of max', 
-          colorkey = list(at = seq(0, 1, length = 15)))
+          main = 'IUCN Dataset percent of max')
 ### this is the difference one. Should it be min value to max value?
 levelplot(diff_pct_map, par.settings = myTheme, 
-          main = 'Difference: AquaMaps - IUCN by percent', 
+          main = 'Difference: AquaMaps - IUCN by percent')
+
+diff_ln_map <- all_am_ln_map - all_iucn_ln_map
+levelplot(diff_ln_map, 
+          par.settings = myTheme, 
+          pretty = TRUE,
+          margin = list(axis = TRUE),
+          main = 'Difference in relative species richness (log-transformed): AquaMaps - IUCN', 
           colorkey = list(at = seq(-1, 1, length = 15)))
+maxValue(all_am_ln_map)
+minValue(all_am_ln_map)
+maxValue(all_iucn_ln_map)
+minValue(all_iucn_ln_map)
+maxValue(diff_ln_map)
+minValue(diff_ln_map)
+diff_ln_pts <- as.data.frame(rasterToPoints(diff_ln_map))
+
+spp_richness_diff_plot <- ggplot(diff_ln_pts, aes(x = x, y = y)) +
+  ggtheme_map + 
+  geom_raster(aes(fill = layer)) +
+  scale_fill_gradient2(low = 'red', mid = 'white', high = 'blue', midpoint = 0) +
+  borders('world', color='gray40', fill='gray45', size = .1) +  # create a layer of borders
+  scale_x_continuous(breaks = seq(-180, 180, by = 30), expand = c(0, 2)) +
+  scale_y_continuous(breaks = seq( -90,  90, by = 30), expand = c(0, 2)) +
+  labs(title = 'Difference in relative species richness (log-transformed): AquaMaps - IUCN', x = NULL, y = NULL) 
+
+spp_richness_diff_plot
 
 
 ```
