--- a/data_explore.Rmd
+++ b/data_explore.Rmd
@@ -55,8 +55,14 @@ if (!file.exists(data_file)) {
   create_spp_list(spp_list_base, data_file)
 }
 
+
 spp_list <- read.csv(data_file, stringsAsFactors = FALSE) %>%
-  filter(!is.na(sm_perc)) ### will ditch the ones where no IUCN polygon exists
+  filter(!is.na(sm_perc)) 
+  ### will ditch the ones where no IUCN polygon exists - or are these species
+  ### whose ranges only occur in cells beyond the LOICZID grid?
+spp_list <- spp_list %>%
+  left_join(read.csv('sciname_lookups/spp_groupnames.csv', stringsAsFactors = FALSE),
+            by = 'spp_group')
 
 ```
 
@@ -89,19 +95,25 @@ pct_overlap_quartiles <- quantile(spp_list$sm_perc, na.rm = TRUE)[2:4]
 #                'q4a' = 'Metanephrops australiensis', 
 #                'q3' = 'Conus magnificus')
 
+# spp_rando <- c("Lagocephalus lagocephalus",
+#                "Makaira nigricans",
+#                "Pentacheles laevis",
+#                "Stereomastis suhmi",
+#                "Stereomastis surda") 
+# 
 ### truncate the species names for the representative species
 # spp_list_label <- spp_list %>%
-#   filter(sciname %in% spp_quads) %>%
+#   filter(sciname %in% spp_rando) %>%
 #   separate(sciname, c('g', 's'), sep = ' ', remove = FALSE) %>%
 #   mutate(sciname_label = paste(str_sub(g, 1, 1), '. ', s, sep = '')) %>%
-#   select(-g, -s)
+#   dplyr::select(-g, -s)
 
 ### mongo plot time
 scatter_arearatio_vs_overlap <- ggplot(spp_list %>% 
                                          transform(popn_category = reorder(popn_category, category_score)),
                                        aes(x = area_ratio, y = sm_perc, 
                                            color = popn_category,
-                                           size = popn_category)) + 
+                                           size = lg_area_pct)) + 
   ggtheme_plot + 
   ### color the quadrant backgrounds:
     annotate("rect", xmin = area_ratio_quartiles[2],  xmax = 100, 
@@ -134,7 +146,7 @@ scatter_arearatio_vs_overlap <- ggplot(spp_list %>%
   labs(x = 'Area match: \n(range area smaller : range area larger) * 100%', 
        y = 'Distribution match: \n % overlap of smaller range w/ larger', 
        title = 'Area match vs distribution match',
-       color = 'Risk', size = 'Risk')
+       color = 'Risk', size = '% ocean range')
 
 ggsave(file.path(dir_fig, 'AreaRatiovsPercOverlap.png'), width = 6, height = 4)
 
@@ -163,7 +175,7 @@ for (i in 1:length(spp_quads)) { # i = 1
 ``` {r examine_spp_gp_quartiles, echo = FALSE, eval = TRUE}
 
 spp_list1 <- spp_list %>%
-  group_by(spp_group) %>%
+  group_by(spp_group_text) %>%
   mutate(n_spp = n()) %>%
   ungroup()
 
@@ -179,23 +191,23 @@ spp_list_q4 <- spp_list1 %>%
 
 ### Summarize quadrant species list by species group (e.g. CORALS1)
 spp_gp_q1 <- spp_list_q1 %>%
-  group_by(spp_group) %>%
+  group_by(spp_group_text) %>%
   summarize(n_spp = first(n_spp), n_spp_q1 = n())
 spp_gp_q2 <- spp_list_q2 %>%
-  group_by(spp_group) %>%
+  group_by(spp_group_text) %>%
   summarize(n_spp = first(n_spp), n_spp_q2 = n())
 spp_gp_q3 <- spp_list_q3 %>%
-  group_by(spp_group) %>%
+  group_by(spp_group_text) %>%
   summarize(n_spp = first(n_spp), n_spp_q3 = n())
 spp_gp_q4 <- spp_list_q4 %>%
-  group_by(spp_group) %>%
+  group_by(spp_group_text) %>%
   summarize(n_spp = first(n_spp), n_spp_q4 = n())
 
 ### Join species group by quadrant into a single dataframe
 spp_gp_quadrants <- spp_gp_q1 %>%
-  full_join(spp_gp_q2, by = c('spp_group', 'n_spp')) %>%
-  full_join(spp_gp_q3, by = c('spp_group', 'n_spp')) %>%
-  full_join(spp_gp_q4, by = c('spp_group', 'n_spp')) %>%
+  full_join(spp_gp_q2, by = c('spp_group_text', 'n_spp')) %>%
+  full_join(spp_gp_q3, by = c('spp_group_text', 'n_spp')) %>%
+  full_join(spp_gp_q4, by = c('spp_group_text', 'n_spp')) %>%
   gather(quad, n_quad, n_spp_q1, n_spp_q2, n_spp_q3, n_spp_q4) %>% 
   mutate(quad = str_replace(quad, 'n_spp_', ''),
          pct_quad = n_quad/n_spp,
@@ -206,8 +218,8 @@ spp_gp_quadrants <- spp_gp_q1 %>%
 spp_gp_quadrants <- spp_gp_quadrants %>%
   left_join(spp_gp_quadrants %>% 
               filter(quad == 'q1') %>%
-              dplyr::select(spp_group, pct_q1 = pct_quad),
-            by = 'spp_group') %>%
+              dplyr::select(spp_group_text, pct_q1 = pct_quad),
+            by = 'spp_group_text') %>%
   mutate(quad = str_replace(quad, 'q1', 'q1 well-matched'),
          quad = str_replace(quad, 'q2', 'q2 dist-matched'),
          quad = str_replace(quad, 'q3', 'q3 area-matched'),
@@ -215,8 +227,8 @@ spp_gp_quadrants <- spp_gp_quadrants %>%
 
 ### Plot the bar chart
 barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>% 
-                                  transform(spp_group = reorder(spp_group, pct_q1)), 
-                                aes(x = spp_group, fill = quad, weight = pct_quad)) +
+                                  transform(spp_group_text = reorder(spp_group_text, pct_q1)), 
+                                aes(x = spp_group_text, fill = quad, weight = pct_quad)) +
   ggtheme_plot + 
   geom_bar(stat = 'bin', alpha = .5) +
   scale_fill_manual(values = c('q1 well-matched'   = 'green4', 
@@ -233,6 +245,89 @@ barchart_spp_gp_quads <- ggplot(spp_gp_quadrants %>%
 print(barchart_spp_gp_quads)
 ggsave(plot = barchart_spp_gp_quads,
        filename = file.path(dir_fig, 'barchart_spp_gp_quads.png'),
+       width = 6, height = 4)
+
+```
+
+
+``` {r examine_risk_quartiles, echo = FALSE, eval = TRUE}
+
+spp_list1 <- spp_list %>%
+  group_by(popn_category) %>%
+  mutate(n_spp = n()) %>%
+  ungroup()
+
+### Create species lists by quadrant
+spp_list_q1 <- spp_list1 %>%
+  filter(area_ratio >= median(area_ratio) & sm_perc >= median(sm_perc))
+spp_list_q2 <- spp_list1 %>%
+  filter(area_ratio < median(area_ratio) & sm_perc >= median(sm_perc))
+spp_list_q3 <- spp_list1 %>%
+  filter(area_ratio >= median(area_ratio) & sm_perc < median(sm_perc))
+spp_list_q4 <- spp_list1 %>%
+  filter(area_ratio < median(area_ratio) & sm_perc < median(sm_perc))
+
+### Summarize quadrant species list by species group (e.g. CORALS1)
+spp_risk_q1 <- spp_list_q1 %>%
+  group_by(popn_category) %>%
+  summarize(n_spp = first(n_spp), n_spp_q1 = n())
+spp_risk_q2 <- spp_list_q2 %>%
+  group_by(popn_category) %>%
+  summarize(n_spp = first(n_spp), n_spp_q2 = n())
+spp_risk_q3 <- spp_list_q3 %>%
+  group_by(popn_category) %>%
+  summarize(n_spp = first(n_spp), n_spp_q3 = n())
+spp_risk_q4 <- spp_list_q4 %>%
+  group_by(popn_category) %>%
+  summarize(n_spp = first(n_spp), n_spp_q4 = n())
+
+### Join species group by quadrant into a single dataframe
+spp_risk_quadrants <- spp_risk_q1 %>%
+  full_join(spp_risk_q2, by = c('popn_category', 'n_spp')) %>%
+  full_join(spp_risk_q3, by = c('popn_category', 'n_spp')) %>%
+  full_join(spp_risk_q4, by = c('popn_category', 'n_spp')) %>%
+  gather(quad, n_quad, n_spp_q1, n_spp_q2, n_spp_q3, n_spp_q4) %>% 
+  mutate(quad = str_replace(quad, 'n_spp_', ''),
+         pct_quad = n_quad/n_spp,
+         n_quad   = ifelse(is.na(n_quad),   0, n_quad),
+         pct_quad = ifelse(is.na(pct_quad), 0, pct_quad))
+
+
+spp_risk_quadrants <- spp_risk_quadrants %>%
+  left_join(spp_risk_quadrants %>% 
+              filter(quad == 'q1') %>%
+              dplyr::select(popn_category, pct_q1 = pct_quad),
+            by = 'popn_category') %>%
+  mutate(quad = str_replace(quad, 'q1', 'q1 well-matched'),
+         quad = str_replace(quad, 'q2', 'q2 dist-matched'),
+         quad = str_replace(quad, 'q3', 'q3 area-matched'),
+         quad = str_replace(quad, 'q4', 'q4 poorly matched')) %>%
+  left_join(spp_list %>%
+              dplyr::select(popn_category, cat_rank = category_score) %>%
+              unique() %>%
+              mutate(cat_rank = ifelse(popn_category == 'DD', -1, cat_rank)),
+            by = 'popn_category')
+
+### Plot the bar chart
+barchart_spp_risk_quads <- ggplot(spp_risk_quadrants %>% 
+                                  transform(popn_category = reorder(popn_category, cat_rank)), 
+                                aes(x = popn_category, fill = quad, weight = pct_quad)) +
+  ggtheme_plot + 
+  geom_bar(stat = 'bin', alpha = .5) +
+  scale_fill_manual(values = c('q1 well-matched'   = 'green4', 
+                               'q2 dist-matched'   = 'greenyellow', 
+                               'q3 area-matched'   = 'orange', 
+                               'q4 poorly matched' = 'orangered2')) +
+  geom_text(aes(label = sprintf('n = %s', n_spp), y = .05), hjust = 0, size = 4) +
+  coord_flip() +
+  labs(x = 'Risk category', 
+       y = 'Relative number of species per quadrant', 
+       title = 'Risk category breakdown by quadrant',
+       fill = 'Match quadrant')
+
+print(barchart_spp_risk_quads)
+ggsave(plot = barchart_spp_risk_quads,
+       filename = file.path(dir_fig, 'barchart_spp_risk_quads.png'),
        width = 6, height = 4)
 
 ```
